Prevent Module Access When Not Logged In (#18)
* added new ProtectedRoute component that will prevent the user from accessing any modules without logging in first, added animation to point to the login button when the user clicks start on a module without being logged in, removed unused image and video from frontend assets, fixed login button font family not showing

* changed clickGif timer to 3 seconds instead of 5

--- a/frontend/src/assets/css/homepage.css
+++ b/frontend/src/assets/css/homepage.css
@@ -122,3 +122,11 @@
     width: 600px;
 }
 
+.click-gif {
+    position: fixed;
+    width: 150px;
+    top: 35px;
+    right: 100px;
+    pointer-events: none;
+    z-index: 2;
+}
